4.1.0
 - engine_info() now returns version as a numeric_version() type

4.0.0
 - If a call to ct$eval(),ct$get(), or ct$call() returns a JavaScript promise,
   you can set await = TRUE to wait for the promise to be resolved. It will
   then return the result of the promise, or an error in case the promise is
   rejected.
 - New section about promises in the intro vignette.
 - New function wasm_features() lists the supported WASM capabilities on the
   current installation.
 - Updated static libv8 for Mac and Linux to v8-v8-9.6.180.12
 - Windows ucrt: update libv8 to 9.1.269.38
 - Legacy libv8 versions (3.xx) are no longer supported. Package will still
   build but the examples and vignette now assume support for promises.
 - On Ubuntu, RHEL, and MacOS we now default to DOWNLOAD_STATIC_LIBV8=1 for
   supported architectures (amd64 and arm64). If this fails it will fall back
   on finding a local libv8. Opt-out by setting DISABLE_STATIC_LIBV8=1.

3.6.0
 - Try to give better error message when unable to allocate, probably due to
   hitting the stack limit. Previously we would see 'string conversion failed'
   which was very confusing.
 - The same stacklimit is now used across all platforms. Previously we would only
   set it on Linux, but apparently it is also needed on Windows sometimes.
 - Disable stacklimit when running in ASAN (which blows up the stack size)
 - Make DOWNLOAD_STATIC_LIBV8 the default on RHEL/CentOS based distros because
   these include a very old or no libv8.
 - Check and warn against very old libv8 when attaching the package.

3.5.0
 - On legacy systems which still have libv8 version 3.x we now try to download
   a more recent static libv8. We plan to deprecate support for libv8 3.x, which
   is now over 10 years old, and does not support ES6 (modern JavaScript).

3.4.2
 - Add Windows binaries for ucrt targets

3.4.1
 - Minor compatibility fixes by Jan Marvin for new versions of libv8.

3.4.0